--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.4.3",
     "vue": "^2.6.10",
+    "vue-cookies": "^1.7.0",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
