--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth-service",
+  "name": "microtrello-auth-service",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
